Reporting: Refactoring zum Beheben von Sonar-Cube-Issues